# TafsirBot

./: .env.example  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README  README.md  docker-compose.yml  pyproject.toml
db/migrations/: 001_persistence.sql  002_chat_session_client_id.sql
docs/: AUDIT-REPORT.md  CORPUS-REGISTRY.md  CORPUS-SOURCES.md  PARALLEL-AGENT-WORKFLOW.md  PHASE-1-PLAN.md  RESEARCH-AGENT-BRIEF.md  TAFSIR-CHOICES.md  TAFSIR-CORPUS.mdx  WEB-POC-CONTRACT.md  WEBHOOK-API.md
docs/classic/: package-lock.json
scripts/: api.py  rag_poc.py  test_poc.py
scripts/acquisition/: convert_maududi.py  download_qurancom.py
scripts/ingestion/: audit.py  chunk.py  clean.py  embed.py  requirements.txt  upsert.py
scripts/ingestion/utils/: ayah_resolver.py  quran_ref.py
scripts/persistence/: __init__.py  config.py  interfaces.py  migrate.py  migrations.py  models.py  postgres.py
sources/: README.md
tests/unit/: test_ayah_resolver.py  test_chunk.py  test_clean.py  test_quran_ref.py  test_rag_poc.py
web/: index.html  package-lock.json  package.json
web/src/: App.jsx  api.js  styles.css
