[project]
name = "tafsirbot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "qdrant-client>=1.9.0",
    "openai>=1.30.0",
    "anthropic>=0.28.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
    "tiktoken>=0.7.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "fastembed>=0.4.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
